--- a/src/css/header.css
+++ b/src/css/header.css
@@ -26,8 +26,32 @@
 .lista-menu{
     display:none;
     position: absolute;
+    top: 8%;
+    width: 60vw;
 }
 
 .container__botao:checked ~ .lista-menu{
     display: block;
+}
+
+.lista-menu__titulo,
+.lista-menu__item{
+    padding: 1em;
+    background-color: var(--branco);
+}
+.lista-menu__titulo{
+    color: var(--laranja);
+    font-weight: 700;
+}
+
+.lista-menu__link{
+    background: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-transform: uppercase;
+}
+
+.container__botao{
+    display: none;
 }
