--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,6 @@
 @import url(/src/css/header.css);
 @import url(/src/css/banner.css);
+@import url(/src/css/carrossel.css);
 
 :root {
     --cor-de-fundo: #EBECEE;
