--- a/src/css/carrossel.css
+++ b/src/css/carrossel.css
@@ -22,7 +22,7 @@
     margin: .5em 0;
 }
 
-.card__descrição {
+.card__descricao {
     display: flex;
     justify-content: space-between;
     margin-bottom: 0.5em;
@@ -43,21 +43,22 @@
     border-radius: 10px;
     margin: 1em;
     padding: 1em;
+    margin: 2em 2em;
 }
 
-.descrição__titulo {
+.descricao__titulo {
     color: var(--laranja);
     font-weight: 700;
 }
 
-.descrição__titulo-livro {
+.descricao__titulo-livro {
     color: var(--azul);
     font-size: 18px;
     font-weight: 700;
     margin: 0.5em 0;
 }
 
-.descrição__texto {
+.descricao__texto {
     font-size: 14px;
 }
 
@@ -71,4 +72,63 @@
     color: var(--branco);
     font-weight: 700;
     text-decoration: none;
+}
+
+
+
+@media screen and (min-width: 1024px) {
+    .carrossel__titulo{
+        font-size: 26px;
+    }
+    .swiper-pagination{
+        margin: 2em 0 3em 0;
+    }
+    .swiper{
+        width: 60%;
+    }
+    .swiper-button-prev,
+    .swiper-button-next 
+    {
+        display: block;
+        top: 60%;
+    }
+    .card{
+        width: 50%;
+        margin: 2em auto;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+    .carrossel__container{
+        display: flex;
+        margin: 0 10vw 3em 10vw;
+        align-items: center;
+    }
+    .swiper-pagination{
+        margin: 1em 0;
+    }
+    .swiper{
+        width: 70%;
+        margin: 3em;
+    }
+    .swiper-button-prev,
+    .swiper-button-next 
+    {
+        display: block;
+        top: 50%;
+    }
+    .descricao__titulo{
+        font-size: 32px;
+    }
+    .descricao__texto{
+        font-size: 16px;
+    }
+    .descricao{
+        margin-right: 2em;
+    }
+
+    .card{
+        width: 60%;
+        margin-left: 3em;
+    }
 }
