--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,6 +14,8 @@
     --preto: #000000; 
     --fonte-principal: "Poppins";
     --fonte-secundaria: "Josefin Sans";
+    --cinza: #474646;
+    --cinza-claro: #858585;
 }
 
 body {
