--- a/src/css/header.css
+++ b/src/css/header.css
@@ -126,6 +126,9 @@
         -webkit-text-fill-color: var(--branco);
         text-decoration: none;
     }
+    .lista-menu{
+        top: 7%;
+    }
 }
 
 
